--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,6 +12,10 @@
     <p>
       <a href="/campgrounds/<%=campground._id%>/edit">Edit</a>
     </p>
+    <p>
+      <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+      <button>Delete Campground</button></form>
+    </p>
     <footer>
       <a href="/campgrounds">All Campgrounds</a>
     </footer>
