--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -12,6 +12,22 @@
         <input class="form-control" type="text" id="location" name="campground[location]" />
       </div>
       <div class="mb-3">
+        <label class="form-label" for="price">Price</label>
+        <div class="input-group">
+          <span class="input-group-text">$</span>
+          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="campground[price]" />
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input class="form-control" type="text" id="image" name="campground[image]" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+      </div>
+      <div class="mb-3">
         <button class="btn btn-success">Add Campground</button>
       </div>
     </form>
