--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,10 +1,10 @@
 <% layout("layouts/boilerplate") %>
 <h1>All Campgrounds</h1>
-<div>
-  <a href="/campgrounds/new">Add Campground</a>
+<div class="mb-3 mt-3">
+  <a class="btn btn-sm btn-success" href="/campgrounds/new">Add Campground</a>
 </div>
 <% for(let campground of campgrounds) { %>
-<div class="card" mb-3>
+<div class="card mb-3">
   <div class="row">
     <div class="col-md-4">
       <img class="img-fluid" src="<%=campground.image%>" alt="" />
