--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,6 +18,11 @@
         <a class="nav-link" href="/campgrounds">All Campgrounds</a>
         <a class="nav-link" href="/campgrounds/new">New Campground</a>
       </div>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link" href="/login">Log In</a>
+        <a class="nav-link" href="/register">Sign Up</a>
+        <a class="nav-link p-2" href="/logout">Log Out</a>
+      </div>
     </div>
   </div>
 </nav>
