--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,9 +19,12 @@
         <a class="nav-link" href="/campgrounds/new">New Campground</a>
       </div>
       <div class="navbar-nav ml-auto">
+        <% if(!currentUser) { %>
         <a class="nav-link" href="/login">Log In</a>
         <a class="nav-link" href="/register">Sign Up</a>
+        <% } else { %>
         <a class="nav-link p-2" href="/logout">Log Out</a>
+        <% } %>
       </div>
     </div>
   </div>
