--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,6 +24,7 @@
     </div>
   </div>
   <div class="col-6">
+    <% if(currentUser) { %>
     <h4>Leave a Review</h4>
     <form action="/campgrounds/<%=campground._id%>/reviews" class="mb-3 validated-form" method="POST" novalidate>
       <div class="mb-3">
@@ -37,14 +38,20 @@
       </div>
       <button class="btn btn-success">Submit Review</button>
     </form>
+    <% } %>
+
+    <!--  -->
     <% for(review of campground.reviews) { %>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%=review.rating%></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%=review.author.username%></h6>
         <p><%=review.body%></p>
+        <% if(currentUser && review.author.equals(currentUser._id)) { %>
         <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
           <button class="btn btn-sm btn-danger">DELETE</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
