--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">Update Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form">
+    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required />
@@ -22,10 +22,9 @@
           <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
-      <div class="mb-3">
-        <label class="form-label" for="image">Image URL</label>
-        <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>" required />
-        <div class="valid-feedback">Looks good!</div>
+      <div class="mb-3 custom-file">
+        <label for="image" class="form-label custom-file-label">Add More Images</label>
+        <input class="form-control" type="file" id="image" name="image" multiple />
       </div>
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
