--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -22,7 +22,11 @@
           <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
-      <input type="file" name="image" id="" multiple />
+      <div class="mb-3 custom-file">
+        <label for="image" class="form-label custom-file-label">Add Images</label>
+        <input class="form-control" type="file" id="image" name="image" multiple />
+      </div>
+      <!-- <input type="file" name="image" id="" multiple /> -->
       <!-- <div class="mb-3">
         <label class="form-label" for="image">Image URL</label>
         <input class="form-control" type="text" id="image" name="campground[image]" required />
