--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -34,6 +34,15 @@
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
       </div>
+      <div class="mb-3">
+        <% campground.images.forEach(function(img, i) { %>
+        <img src="<%=img.url%>" class="img-thumbnail" alt="" />
+        <div class="form-check-inline">
+          <input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%=img.filename%>" />
+        </div>
+        <label for="image-<%=i%>">Delete?</label>
+        <% }) %>
+      </div>
     </form>
     <a href="/campgrounds/<%=campground._id%>">Back to Campground</a>
   </div>
