--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-6">
-    <% campground.images.forEach((img, i) => {%>
+    <% campground.images.forEach(function(img, i) {%>
     <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item <%= i === 0 ? "active" : "" %>">
