--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,13 @@
 <% layout("layouts/boilerplate") %>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
 
+<script>
+  const mapboxToken = "<%-process.env.MAPBOX_TOKEN%>";
+</script>
+
 <div class="row">
   <div class="col-6">
+    <div id='map' style='width: 400px; height: 300px;'></div>
     <% campground.images.forEach(function(img, i) {%>
     <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -90,3 +95,5 @@
     <% } %>
   </div>
 </div>
+
+<script src="/javascripts/showPageMap.js"></script>
