--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,12 @@
 <% for(let campground of campgrounds) { %>
 <div class="card mb-3">
   <div class="row">
-    <div class="col-md-4"><img class="img-fluid" src="<%=campground.images[0]['url']%>" alt="" /></div>
+    <div class="col-md-4">
+      <% if(campground.images.length) { %> 
+        <img class="img-fluid" src="<%=campground.images[0].url%>" alt="" /></div>
+      <% } else { %>
+        <img class="img-fluid" src="https://res.cloudinary.com/h0n0rabl3an0maly/image/upload/v1652331547/CompassCamp/xzkubi7otucdgoqdynpd.jpg" alt="" /></div>
+      <% } %> 
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%=campground.title%></h5>
