--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,8 @@
 <% layout("layouts/boilerplate") %>
+
+<div id="map" style="width: 100%; height: 500px">
+
+</div>
 <h1>All Campgrounds</h1>
 <div class="mb-3 mt-3">
   <a class="btn btn-sm btn-success" href="/campgrounds/new">Add Campground</a>
@@ -25,3 +29,9 @@
   </div>
 </div>
 <% } %>
+
+<script>
+  const mapboxToken = "<%-process.env.MAPBOX_TOKEN%>";
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
