Styling the Homepage
public\stylesheets\home.css
+Background-image with a dark gradient set to cover, position centered and text/box shadows implemented on the body
+Nav-links padded, thickened, spaced, text half ghosted and border-bottom added
+Active nav-link set to white to highligh
+Nav-link:hover changes border-bottom color and ghost
+#button color darkened
+#button:hover text color changes

Bugs:
- Button hover does not trigger
     - Tried ID specific; likely being overridden by another setting

views\home.ejs
+Changed lorem to relevant text
+Added ID for styling tag

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,13 +36,10 @@
       <main class="px-3">
         <h1>CompassCamp</h1>
         <p class="lead">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, accusamus minima. Quos quod tempore aliquid rerum et, sint tempora deserunt magni fuga. Ipsa,
-          quaerat commodi deleniti facere voluptatem suscipit optio? Suscipit, quibusdam nihil assumenda commodi dolorem minima hic, enim nemo voluptatem quod rerum
-          voluptates! Natus culpa illum excepturi consectetur atque nostrum laudantium quae fuga, aliquam quasi incidunt debitis sint nisi! Aliquid numquam nostrum natus
-          velit iste vero eius! Optio, distinctio illo excepturi praesentium laudantium voluptas tenetur dicta nesciunt similique sunt? Ad quaerat eaque unde
-          exercitationem obcaecati. Laborum culpa pariatur quidem.
+          Welcome to CompassCamp! <br />Explore a variety of campgrounds for your next destination. <br />You can even add your own unique hideaways and share them with
+          others!
         </p>
-        <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
+        <a href="/campgrounds" id="button" class="btn btn-lg btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
       </main>
 
       <footer class="mt-auto text-white-50">
