--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,49 +1,53 @@
 <% layout("layouts/boilerplate") %>
 <div class="row">
   <h1 class="text-center">Update Campground</h1>
-  <div class="col-6 offset-3">
-    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
-      <div class="mb-3">
-        <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required />
-        <div class="valid-feedback">Looks good!</div>
+  <div class="col-md-6 offset-md-3">
+    <div class="card shadow">
+      <div class="card-body">
+        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+          <div class="mb-3">
+            <label class="form-label" for="title">Title</label>
+            <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="location">Location</label>
+            <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="price">Price</label>
+            <div class="input-group">
+              <span class="input-group-text">$</span>
+              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="campground[price]" value="<%=campground.price%>" required />
+              <span class="input-group-text">.00</span>
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+          </div>
+          <div class="mb-3 custom-file">
+            <label for="image" class="form-label custom-file-label">Add More Images</label>
+            <input class="form-control" type="file" id="image" name="image" multiple />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="description">Description</label>
+            <textarea class="form-control" type="text" id="description" name="campground[description]" required><%=campground.description%></textarea>
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-info">Update Campground</button>
+          </div>
+          <div class="mb-3">
+            <% campground.images.forEach(function(img, i) { %>
+            <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="" />
+            <div class="form-check-inline">
+              <input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%=img.filename%>" />
+            </div>
+            <label for="image-<%=i%>">Delete?</label>
+            <% }) %>
+          </div>
+        </form>
+        <a href="/campgrounds/<%=campground._id%>">Back to Campground</a>
       </div>
-      <div class="mb-3">
-        <label class="form-label" for="location">Location</label>
-        <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required />
-        <div class="valid-feedback">Looks good!</div>
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="price">Price</label>
-        <div class="input-group">
-          <span class="input-group-text">$</span>
-          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="campground[price]" value="<%=campground.price%>" required />
-          <span class="input-group-text">.00</span>
-          <div class="valid-feedback">Looks good!</div>
-        </div>
-      </div>
-      <div class="mb-3 custom-file">
-        <label for="image" class="form-label custom-file-label">Add More Images</label>
-        <input class="form-control" type="file" id="image" name="image" multiple />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" type="text" id="description" name="campground[description]" required><%=campground.description%></textarea>
-        <div class="valid-feedback">Looks good!</div>
-      </div>
-      <div class="mb-3">
-        <button class="btn btn-info">Update Campground</button>
-      </div>
-      <div class="mb-3">
-        <% campground.images.forEach(function(img, i) { %>
-        <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="" />
-        <div class="form-check-inline">
-          <input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%=img.filename%>" />
-        </div>
-        <label for="image-<%=i%>">Delete?</label>
-        <% }) %>
-      </div>
-    </form>
-    <a href="/campgrounds/<%=campground._id%>">Back to Campground</a>
+    </div>
   </div>
 </div>
