--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="col-6">
-    <div id='map' style='width: 400px; height: 300px;'></div>
+    <div id='map'></div>
     <% if(currentUser) { %>
     <h4>Leave a Review</h4>
     <form action="/campgrounds/<%=campground._id%>/reviews" class="mb-3 validated-form" method="POST" novalidate>
