--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,10 +1,16 @@
 <% layout("layouts/boilerplate") %>
 <div class="row">
   <h1 class="text-center">Update Campground</h1>
-  <div class="col-md-6 offset-md-3">
+  <div class="col-md-6 offset-md-3 mt-3">
     <div class="card shadow">
       <div class="card-body">
-        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+        <form
+          action="/campgrounds/<%=campground._id%>?_method=PUT"
+          method="POST"
+          novalidate
+          class="validated-form"
+          enctype="multipart/form-data"
+        >
           <div class="mb-3">
             <label class="form-label" for="title">Title</label>
             <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required />
@@ -12,14 +18,28 @@
           </div>
           <div class="mb-3">
             <label class="form-label" for="location">Location</label>
-            <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required />
+            <input
+              class="form-control"
+              type="text"
+              id="location"
+              name="campground[location]"
+              value="<%=campground.location%>"
+              required
+            />
             <div class="valid-feedback">Looks good!</div>
           </div>
           <div class="mb-3">
             <label class="form-label" for="price">Price</label>
             <div class="input-group">
               <span class="input-group-text">$</span>
-              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="campground[price]" value="<%=campground.price%>" required />
+              <input
+                type="text"
+                class="form-control"
+                aria-label="Amount (to the nearest dollar)"
+                name="campground[price]"
+                value="<%=campground.price%>"
+                required
+              />
               <span class="input-group-text">.00</span>
               <div class="valid-feedback">Looks good!</div>
             </div>
@@ -30,10 +50,12 @@
           </div>
           <div class="mb-3">
             <label class="form-label" for="description">Description</label>
-            <textarea class="form-control" type="text" id="description" name="campground[description]" required><%=campground.description%></textarea>
+            <textarea class="form-control" type="text" id="description" name="campground[description]" required>
+<%=campground.description%></textarea
+            >
             <div class="valid-feedback">Looks good!</div>
           </div>
-          <div class="mb-3">
+          <div class="d-grid gap-2 mb-3">
             <button class="btn btn-info">Update Campground</button>
           </div>
           <div class="mb-3">
