Modify landing page button styles
public\stylesheets\home.css
+text color from red to olive
+spacing and alpha channel on campgrounds button
+transition and new background color on hover

views\home.ejs
+changed anchor tag button to button
- removed inline styles for background color and text color

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,8 @@
           Welcome to CompassCamp! <br />Explore a variety of campgrounds for your next destination. <br />You can even add your own unique hideaways and share them with
           others!
         </p>
-        <a href="/campgrounds" id="button" class="btn btn-lg btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
+        <br />
+        <button href="/campgrounds" id="button" class="btn btn-lg btn-secondary font-weight-bold">View Campgrounds</button>
       </main>
 
       <footer class="mt-auto text-white-50">
