--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -27,13 +27,18 @@ body {
 
 .nav-link:hover {
   border-bottom-color: rgba(255, 255, 255, 0.5);
-  color: red;
+  color: olive;
 }
 
-#button {
-  color: #333;
+.btn {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.3);
+  text-decoration: none;
+  margin-top: 1rem;
 }
 
-#button:hover {
-  color: red;
+.btn:hover {
+  background-color: olive;
+  border: 2px solid white;
+  transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.25s;
 }
